# python-mrss

./: PKGBUILD  README.md  pyproject.toml
hooks/: pre-commit
mrss/: __init__.py  _easy.py  _mailbox.py  _maildir.py  _mixins.py  _state.py  _utils.py
mrss/tests/: test_mailbox.py  test_maildir.py  test_mixins.py  test_state.py  test_utils.py
