[tool.poetry]
name = "mrss"
version = "0.1.0"
description = "RSS to email"
license = "Unlicense"
authors = ["zsugabubus"]
include = ["py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
feedparser = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
